# occ

./: .gitattributes  .gitignore  .gitmodules  AGI_OS_ARCHITECTURE_ENHANCED.md  AGI_OS_COGNITIVE_INIT_IMPL.md  AGI_OS_IMPLEMENTATION_GUIDE.md  AGI_OS_IMPLEMENTATION_PLAN.md  AGI_OS_IMPLEMENTATION_REPORT.md  AGI_OS_INTEGRATION_PLAN.md  AGI_OS_INTEGRATION_PROJECT_PLAN.md  AGI_OS_README.md  ANALYSIS.md  ANALYSIS_REPORT.md  AUTOGENESIS_IMPLEMENTATION_SUMMARY.md  AUTO_SYNC_DOCUMENTATION.md  BEFORE_AFTER_COMPARISON.md  BUILD_DEPENDENCY_ORDER.md  BUILD_ERROR_CHECK_REPORT.md  BUILD_FAILURE_ANALYSIS.md  BUILD_FIXES_APPLIED.md  BUILD_FIX_SUMMARY.md  BUILD_INSTRUCTIONS.md  BUILD_ISSUES_ANALYSIS.md  BUILD_MONITORING_REPORT.md  BUILD_SEQUENCE_COMPARISON.md  BUILD_TRIGGER.txt  BUILD_VALIDATION_REPORT.md  BUILD_VERIFICATION_PLAN.md  CHANGELOG.md  CHANGES_SUMMARY.md  CI_BUILD_ALL_OPTIMIZATION.md  CI_BUILD_ALL_OPTIMIZATION_SUMMARY.md  CI_BUILD_FIXES_SUMMARY.md  CLAUDE.md  CMAKELISTS_UNIFICATION_SUMMARY.md  CMakeLists.txt  COGNITIVE_SCHEDULER_IMPL.md  COGNITIVE_SCHEDULER_SPEC.md  COGNITIVE_SYNERGY_FRAMEWORK.md  COGUTIL_WINDOWS_FIXES.md  (+100 more)
.devcontainer/: devcontainer-windows.json  setup-vcpkg.sh
.github/: WORKFLOW_CHANGES_2025-12-22.md  copilot-instructions.md
agentic-chatbots/: CMakeLists.txt
agents/: CMakeLists.txt
agi-bio/: CMakeLists.txt
asmoses/: CMakeLists.txt
atomese-simd/: CMakeLists.txt
atomspace/: vcpkg.json
atomspace-accelerator/: CMakeLists.txt
atomspace-agents/: CMakeLists.txt
atomspace-bridge/: CMakeLists.txt
atomspace-cog/: CMakeLists.txt
atomspace-dht/: CMakeLists.txt
atomspace-explorer/: npm-shrinkwrap.json  package-lock.json  package.json
atomspace-ipfs/: CMakeLists.txt
atomspace-metta/: CMakeLists.txt
atomspace-pgres/: CMakeLists.txt
atomspace-restful/: CMakeLists.txt
atomspace-rocks/: CMakeLists.txt
atomspace-rpc/: CMakeLists.txt
atomspace-storage/: CMakeLists.txt
atomspace-typescript/: package-lock.json  package.json
atomspace-websockets/: CMakeLists.txt
attention/: CMakeLists.txt
benchmark/: CMakeLists.txt
build-tools/: README.md
cheminformatics/: CMakeLists.txt
cogarc/: .gitignore  EXAMPLES.md  INDEX.md  PROJECT_SUMMARY.md  QUICKREF.md  README.md  USAGE.md
cogarc/template/: CMakeLists.txt  README.md
cogarc/template/.circleci/: config.yml
cogarc/template/.github/workflows/: build.yml
cogarc/template/debian/: changelog  control  copyright  lib@COMPONENT_NAME@-dev.install  lib@COMPONENT_NAME@.install  rules
cogarc/template/opencog/: version.h
coggml/: CMakeLists.txt
cogkapi/: README.md
cognumach/: CMakeLists.txt  mig  open-issues-gnumach.md
cognumach/tools/: dtrace-analyze-enhanced.py  dtrace-visualize.py  instrumentation-report.py
cognumach/vm/: vm_memory_pool.c  vm_memory_pool.h
cogself/: CMakeLists.txt  QUICKSTART.md  README_NEUROCOG.md  __init__.py  ascii_art.py  demo_neurocog.py  neurocog_core_self.py  neurocog_playground.py  visual_demo.py
cogserver/: CMakeLists.txt
cogutil/: CMakeLists.txt  vcpkg.json
cogutil/cmake/: CMakeLists.txt  OpenCogGccOptions.cmake
cogutil/opencog/util/: CMakeLists.txt  Config.cc  Logger.cc  Logger.h  async_buffer.h  async_method_caller.h  backtrace-symbols.c  concurrent_queue.h  concurrent_set.h  concurrent_stack.h  exceptions.cc  lazy_random_selector.cc  lazy_selector.cc  misc.cc  mt19937ar.cc  numeric.h  oc_assert.cc  oc_omp.cc  platform.cc  platform.h  windows_compat.h  zipf.h
core/: __init__.py  agi_boot.py  agi_event_bus.py  agi_scheduler.py
diagnostic-atoms/: README.md
dimensional-embedding/: CMakeLists.txt
docs/: BUILD_SEQUENCES.md  IMPLEMENTATION_SUMMARY_DEC16.md  INFERNO_KERNEL_AGI_ARCHITECTURE.md  NEUROCOG_CORE_SELF.md  README.md  VERSION_MANAGEMENT.md  attention-guided-learning.md  cross-modal-cognitive-fusion.md  debian-packages.md  distributed-cognitive-shard-network.md  generate_timeline.py  inferno-agi-os-architecture.md
electron-app/: package.json
examples/: synergy_demo.py
generate/: CMakeLists.txt
github-app/: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  app.py  app.yml  docker-compose.yml  handlers.py  requirements.txt
gnn/: README.md  __init__.py  atomspace_bridge.py  graph_network.py  requirements.txt
hurdcog/: CMakeLists.txt  run-phase2-tests.py  run-phase5-tests.py  run-phase6-tests.py  test-ecan-phase2.py  test-guix-stages-integration.py  test_phase4_5_integration.py  validate-documentation-finalization.py  validate-ecan-phase2.py  validate-phase3-completion.py  validate-production-readiness.py  verify-phase2-completion.py
hurdcog-integration/: atomspace-hurdcog-bridge.py
hurdcog/cogkernel/: fusion-reactor-server.py  run-meta-cognition-tests.py  test-dashboard.py  test-realtime-learning-integration.py
hurdcog/cogkernel/embodiment/: api_server.py  test_api.py
hurdcog/cogkernel/embodiment/ros/: cognitive_planner.py
hurdcog/cogkernel/ggml/: CROSS_MODAL_FUSION.md  test_cross_modal_fusion.c
hurdcog/docs/open-issues/: example_unit_test.py
hurdcog/ecma262-main/: package-lock.json  package.json
hurdcog/guix-build-system/atomspace-fs/: test-integration.py
inferno-agi-kernel/: README.md
inferno-agi-os/: INFERNO_AGI_KERNEL_README.md  README.md  mkfile
inferno-kern/: README.md
integration/: CMakeLists.txt  README.md
integration/atomspace-machspace/: CMakeLists.txt  MachSpaceStorageNode.cc  MachSpaceStorageNode.h
integration/cognitive-scheduler/: cognitive_scheduler.c  cognitive_scheduler.h
pi_vision/pi_face_tracker/: CMakeLists.txt  package.xml
pi_vision/pi_face_tracker/nodes/: face_tracker.py
pi_vision/ros2opencv/: CMakeLists.txt  package.xml
pi_vision/ros2opencv/nodes/: avi2ros.py
pi_vision/ros2opencv/params/: SamplesConfig.xml
pi_vision/ros2opencv/src/: ros2opencv.py
tensor-logic/: CMakeLists.txt
tensor-logic/opencog/tensor-logic/: ESNReservoir.cpp  ESNReservoir.h  MultiEntityAtomSpace.cpp  MultiEntityAtomSpace.h  MultiScaleAnalysis.cpp  MultiScaleAnalysis.h  NetworkAwareDAS.cpp  NetworkAwareDAS.h  TensorAtomSpace.cpp  TensorAtomSpace.h  TensorLogic.cpp  TensorLogic.h
(+822 files in other folders)
